<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_waybill"
            android:icon="@drawable/ic_tracking"
            android:title="@string/item_waybill" />
        <item
            android:id="@+id/nav_visit"
            android:icon="@drawable/ic_calendar"
            android:title="@string/visit_name" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_clients"
            android:title="@string/clients" />
    </group>

    <item android:title="@string/nav_service">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/item_settings"/>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/item_exit"/>
        </menu>
    </item>

    <group android:checkableBehavior="single">
    </group>

</menu>
