<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_call"
        android:orderInCategory="100"
        android:title="@string/action_phone_call"
        android:icon="@drawable/ic_phone_call"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_foto"
        android:orderInCategory="100"
        android:title="@string/action_foto"
        android:icon="@drawable/ic_camera"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_map_location"
        android:orderInCategory="100"
        android:title="@string/action_map"
        android:icon="@drawable/ic_map"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_location"
        android:orderInCategory="100"
        android:title="@string/action_show_location"
        android:icon="@drawable/ic_location"
        app:showAsAction="always" />
    <item
    android:id="@+id/action_return"
    android:orderInCategory="100"
    android:title="@string/action_return"
    android:icon="@drawable/ic_arrow_back"
    app:showAsAction="withText" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="withText" />
</menu>
