<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/cast_ic_notification_stop_live_stream"
        android:id="@+id/imageView_fuellist"
        android:layout_weight="1.9"
        android:background="@drawable/shape_body_left"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@drawable/shape_body_left"
        android:textColor="@color/colorPrimary"
        android:gravity="left|center_horizontal"
        android:textSize="@dimen/textsize_table_cap"
        android:padding="@dimen/pading_edittext_waybill_cap"
        android:text="@string/fuel_date"
        android:id="@+id/fuel_item_data"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/shape_body_left"
        android:textColor="@color/colorPrimary"
        android:gravity="left|center_horizontal"
        android:textSize="@dimen/textsize_table_cap"
        android:padding="@dimen/pading_edittext_waybill_cap"
        android:text="@string/fuel_type_name"
        android:id="@+id/fuel_item_type"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:background="@drawable/shape_body_right"
        android:textColor="@color/colorPrimary"
        android:gravity="left|center_horizontal"
        android:textSize="@dimen/textsize_table_cap"
        android:padding="@dimen/pading_edittext_waybill_cap"
        android:text="@string/fuel_litres_name"
        android:id="@+id/fuel_item_litres"/>

</LinearLayout>