<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
              android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/text_size_small_style">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_name"
                android:inputType="textUri"
                android:maxLines="1"
                android:textSize="@dimen/text_size_medium"
                android:id="@+id/client_detail_name" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/text_size_small_style"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_adress"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textSize="@dimen/text_size_medium"
                android:id="@+id/client_detail_adress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/text_size_small_style"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_phone"
                android:inputType="text|phone"
                android:maxLines="1"
                android:textSize="@dimen/text_size_medium"
                android:id="@+id/client_detail_phone"
                android:maxLength="14" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:id="@+id/close_client_detail_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/save_client_detail_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_button_right_botton"
            android:text="@string/action_save"
            android:textColor='@color/colorWhite'
            android:textSize="@dimen/text_size_medium"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
